# teachalot

./: .gitignore  .gitmodules  README.md
Algoritmos/Apostila/: Apostila.lyx
Algoritmos/E01/: Exercicios.lyx
Algoritmos/E02/: Exercicios.lyx
Algoritmos/Exam-01/: Exercicios.lyx
Algoritmos/Scripts/: createpdf.sh
Code/: Animal.java  CadeiraFull.java  Casting.java  ClasseAbstrata.java  Divisao.java  DoWhileLoop2.java  ExemploBreak.java  ExemploDiasSwitch.java  InstanciasDeBebe.java  ModificadorFinal.java  MultiploDeTres.java  MultiploDeTresSemChaves.java  Pessoa.java  Redimensionavel.java  TipoInteiro.java  UmaClasseConstrutorPadrao.java
Learning/Cpp/HackerRank/NewYearChaos/: CMakeLists.txt
Learning/Cpp/HackerRank/NewYearChaos/Include/: bribes.h
Learning/Cpp/HackerRank/NewYearChaos/Src/: bribes.cpp
Learning/Cpp/HackerRank/NewYearChaos/Test/: minimum_bribes.cpp
LinguagemDeProgramacaoI/Code/: AbrirArquivo.java  ArrayExcecao.java  ArrayExcecaoCatch.java  ArvoreBinaria.java  Bebe.java  BotaoAction.java  BusyLoop.java  CachorroCasting.java  CachorroPolymorphism.java  Cadeira.java  CadeiraComAtributosUnderline.java  CadeiraComConstrutorThis.java  CadeiraComConstrutores.java  CadeiraPrivate.java  CadeiraStatic.java  CaixaDeDialogo.java  CaixaDeResposta.java  DialogoCompleto.java  Enumeracao.java  EscreverBinario.java  EscreverParabensBinario.java  EscreverTexto.java  Excecao.java  ExemploArray.java  ExemploArrayList.java  ExemploBoolean.java  (+44 more)
Presentation-02/: Presentation.lyx
Presentation-03/: ListasEVetores.lyx  Memory.lyx
Presentation-05/: Polimorfism.lyx
(+650 files in other folders)
